--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,6 @@
     <string name="app_name">FxCamera</string>
     <string name="title_activity_main">FxCamera</string>
 
-    <string name="action_settings">Settings</string>
-
     <string name="camera_not_found">No camera harware found</string>
-    <string name="take_photo_help">Touch anywhere on screen to take picture</string>
+    <string name="save_file">Save path: %s</string>
 </resources>
